# bmcweb-plugin-arch

./: bmcweb_config.h  meson.build
dump_offload/: meson.build
dump_offload/src/: dump_offload.cpp
experimental_plugin/: meson.build
experimental_plugin/src/: experimental_plugin.cpp
plugin-ifaces/: router-plugin.h
redfish_event/: meson.build
redfish_event/src/: redfish_event.cpp
src/: web.cpp
